# vln-asr-tts-bridge

./: .gitignore  CMakeLists.txt  README.md  environment.yml  package.xml
config/: voice_io.yaml
launch/: voice_io.launch
scripts/: create_conda_env.sh  run_voice_io_conda.sh  test_dashscope_asr.py  test_microphone_input.py  voice_io_node.py
tests/: test_voice_io_dashscope.py
