<?xml version="1.0"?>
<package format="2">
  <name>asr4trailer</name>
  <version>0.1.0</version>
  <description>ROS1 voice input and output bridge for VLN navigation.</description>

  <maintainer email="tianbot@example.com">tianbot</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
