<?xml version="1.0"?>
<package format="2">
  <name>vln_asr_tts_bridge</name>
  <version>0.1.0</version>
  <description>ROS1 ASR/TTS voice bridge for VLN navigation.</description>

  <maintainer email="tianbot@example.com">tianbot</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
